Fixed search field overflow

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Github Theme URI: https://github.com/pythonian4000/elizagrigg
 Author: Jack Grigg
 Author URI: http://jackgrigg.com/
 Description: Theme for Eliza Grigg's website.
-Version: 0.1.3
+Version: 0.1.4
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: ElizaGrigg
@@ -695,6 +695,10 @@ object {
 /* Search widget */
 .widget_search .search-submit {
 	display: none;
+}
+
+.widget_search .search-field {
+	width: 95%;
 }
 
 
